--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Rifles/m4spr_rifle.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Rifles/m4spr_rifle.yml
@@ -61,6 +61,7 @@
       rmc-aslot-barrel:
         whitelist:
           tags:
+          - RMCSichAttachmentBarrelGrenadeLauncher
           - RMCAttachmentExtendedBarrel
           - RMCAttachmentExtendedCompensator
           - RMCAttachmentSuppressor
