runners and a defender
added runners and a defender

--- a/Resources/Prototypes/_Sich/Entities/Mobs/NPCs/drone.yml
+++ b/Resources/Prototypes/_Sich/Entities/Mobs/NPCs/drone.yml
@@ -37,7 +37,7 @@
     hudOffset: -0.1,0.15
     tier: 1
     bypassTierCount: true
-    unlockAt: 60 # 1 minute
+    unlockAt: 999999999 # never
   - type: XenoLight
   - type: XenoDevolve
     devolvesTo:
