--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Masks/scarfs.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Masks/scarfs.yml
@@ -20,6 +20,9 @@
     slots:
       - mask
       - neck
+  - type: Tag
+    tags:
+    - SichScarf
 
 - type: entity
   parent: RMCBaseScarfMask
@@ -243,6 +246,9 @@
     slots:
     - mask
     - neck
+  - type: Tag
+    tags:
+    - SichScarf
 
 - type: entity
   parent: RMCMaskTornScarfBase
