--- a/Resources/Prototypes/_RMC14/Entities/Structures/Walls/foamed_metal.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Walls/foamed_metal.yml
@@ -77,8 +77,8 @@
 - type: entity
   parent: RMCBaseFoamedMetal
   id: RMCFoamedAluminiumMetal
-  name: foamed aluminium metal
-  description: A lightweight foamed metal wall.
+  name: сугроб #foamed aluminium metal, тимчасова зміна. Це все одно плейсхолдер сугробів.
+  description: Сніговий сугроб, точно не люміній. #A lightweight foamed metal wall.
   suffix: RMC
   components:
   - type: Sprite
@@ -96,6 +96,23 @@
       state: metal_foam-north
     - map: [ "enum.EdgeLayer.West" ]
       state: metal_foam-west
+# нижче додано!!
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 45
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          path: /Audio/Effects/Footsteps/snowstep1.ogg
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+      - !type:SpawnEntitiesBehavior
+        spawn:
+          SichSheetSnowball1:
+            min: 1
+            max: 2
 
 - type: entity
   parent: RMCBaseFoamedMetal
