--- a/Resources/Prototypes/tags.yml
+++ b/Resources/Prototypes/tags.yml
@@ -1240,7 +1240,14 @@
 
 - type: Tag
   id: Shovel
+# sich
 
+- type: Tag
+  id: SichBeret
+
+- type: Tag
+  id: SichScarf
+# sich stop
 - type: Tag
   id: Sidearm
 
