Map, king, stamps, more MRE, xeno actions

--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/king.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/king.yml
@@ -6,8 +6,8 @@
   - RMCXenoSpeechSounds
   - RMCXenoMobCollision
   id: RMCXenoKing
-  name: King
-  description: The end of the line.
+  name: Король
+  description: Кінець.
   components:
   - type: GhostRole
     name: rmc-job-name-xeno-king
