--- a/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_offense_actions.yml
+++ b/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_offense_actions.yml
@@ -1479,8 +1479,8 @@
 - type: entity
   parent: ActionXenoBase
   id: ActionXenoRend
-  name: Rend (25)
-  description: Claw at enemies around you.
+  name: М'ясорубка (25)
+  description: Пройдіться кігтями по всім ворогам навколо себе.
   components:
   - type: Action
     itemIconStyle: NoItem
@@ -1497,8 +1497,8 @@
 - type: entity
   parent: ActionXenoBase
   id: ActionXenoDestroy
-  name: Destroy
-  description: After a short time, jump to the targeted location, destroying structures and gibbing hostiles within a 3x3 range. Works over barricades and other short barriers.
+  name: Стрибок Винищення
+  description: Через короткий час стрибніть до обраного місця, руйнуючи споруди та роздираючі ворогів у радіусі 3 метрів. Діє через барикади та інші невисокі перешкоди.
   components:
   - type: Action
     itemIconStyle: NoItem
