--- a/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/queen.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Mobs/Xeno/queen.yml
@@ -281,6 +281,7 @@
       2: sich-xeno-elder-queen
       3: sich-xeno-ancient-queen
       4: sich-xeno-prime-queen
+      5: sich-xeno-prime-queen
 
 - type: entity
   parent: RMCXenoQueenBase
